--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="normal_text">20sp</dimen>
     <dimen name="larger_text">24sp</dimen>
     <dimen name="default_margin">6dp</dimen>
+    <dimen name="extra_margin">16dp</dimen>
 </resources>
